@@ -107,8 +107,7 @@ parent class in order maintain consistency across languages.
 'dec' => 'Dec',
 # Bits of text used by many pages:
 #
-'categories1' => 'Category',
-'categories' => 'Categories',
+'categories' => '{{PLURAL:$1|Category|Categories}}',
 'category' => 'category',
 'category_header' => 'Articles in category "$1"',
 'subcategories' => 'Subcategories',
@@ -255,8 +254,7 @@ See $1.',
 'hidetoc' => 'hide',
 'thisisdeleted' => 'View or restore $1?',
 'viewdeleted' => 'View $1?',
-'restorelink1' => 'one deleted edit',
-'restorelink' => '$1 deleted edits',
+'restorelink' => '{{PLURAL:$1|one deleted edit|$1 deleted edits}}',
 'feedlinks' => 'Feed:',
 'sitenotice'	=> '-', # the equivalent to wgSiteNotice
 'anonnotice' => '-',
@@ -1490,10 +1488,8 @@ In the latter case you can also use a link, e.g. [[{{ns:Special}}:Export/{{Media
 'spamprotectiontitle' => 'Spam protection filter',
 'spamprotectiontext' => 'The page you wanted to save was blocked by the spam filter. This is probably caused by a link to an external site.',
 'spamprotectionmatch' => 'The following text is what triggered our spam filter: $1',
-'subcategorycount' => "There are $1 subcategories to this category.",
-'subcategorycount1' => "There is $1 subcategory to this category.",
-'categoryarticlecount' => "There are $1 articles in this category.",
-'categoryarticlecount1' => "There is $1 article in this category.",
+'subcategorycount' => "There {{PLURAL:$1|is one subcategory|are $1 subcategories}} to this category.",
+'categoryarticlecount' => "There {{PLURAL:$1|is one article|are $1 articles}} in this category.",
 'listingcontinuesabbrev' => " cont.",
 'spambot_username' => 'MediaWiki spam cleanup',
 'spam_reverting' => 'Reverting to last version not containing links to $1',
